# simple-game

./: AUTHORS  CMakeLists.txt  README.md
lib/: CMakeLists.txt  GameManager.cpp  GameManager.h  Sprite.cpp  Sprite.h  main.cpp  uuidUtil.cpp  uuidUtil.h
